focus/operations/src/snapshots/focus_operations__sync__testing__clone_contains_top_level.snap
---
source: focus/operations/src/sync.rs
expression: "&profile"
---
/*
!/*/
/focus/
*.bzl
BUILD*
WORKSPACE*

