focus/operations/src/snapshots/focus_operations__sync__testing__sync_layer_manipulation-4.snap
---
source: focus/operations/src/sync.rs
expression: "std::fs::read_to_string(&profile_path)?"
---
/*
!/*/
/focus/
/library_b/
/mandatory_y/very_important_info/
/mandatory_z/
/project_b/
/project_b/src/main/java/com/example/cmdline/

