focus/operations/src/snapshots/focus_operations__sync__testing__sync_layer_manipulation-5.snap
---
source: focus/operations/src/sync.rs
expression: "std::fs::read_to_string(&profile_path)?"
---
/*
!/*/
/focus/
/mandatory_y/very_important_info/
/mandatory_z/

