focus/operations/src/snapshots/focus_operations__sync__testing__sync_layer_manipulation.snap
---
source: focus/operations/src/sync.rs
expression: "std::fs::read_to_string(&profile_path)?"
---
/*
!/*/
/focus/
/mandatory_y/
!/mandatory_y/*/
/mandatory_y/very_important_info/
/mandatory_z/

